base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 1
  template:
    spec:
      containers:
        - image: docker.io/traefik/whoami:latest
          name: whoami
          ports:
            - containerPort: 80
              name: http
